# ferramenta-download-ytdlp

./: .gitignore  Audio.py  README.md  Video.py  links.txt  main.py  pyproject.toml  requeriments.txt
