[project]
name = "ferramenta-download-ytdlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Allison",email = "allison.htompson@gmail.com"}
]

requires-python = "=3.12"
dependencies = [
    "ffmpeg (>=1.4,<2.0)",
    "yt-dlp (>=2025.8.11,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
